2002-10-20  H.J. Lu  <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/configure.in: Don't check
	/lib/modules/`uname -r`/build/include for kernel headers if
	cross compiling.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

2002-10-25  Roland McGrath  <roland@redhat.com>

	* math/math.h (M_LOG2El): Correct the value.
	From Stephen L Moshier <steve@moshier.net>.

	* sysdeps/unix/sysv/linux/init-first.c (init): Remove [! SHARED]
	conditional from __libc_multiple_libcs access.  Remove kludge for weak
	symbol access with old compilers we no longer support.
	* sysdeps/unix/sysv/aix/init-first.c (init): Likewise.
	* sysdeps/generic/libc-start.c (__libc_start_main): Likewise.

2002-10-25  Roland McGrath  <roland@redhat.com>

	* sysdeps/posix/sigvec.c [SA_RESETHAND]: Disable wrapper hacks and
	implement SV_RESETHAND by translating it to SA_RESETHAND.

2002-10-23  Alexandre Oliva  <aoliva@redhat.com>

	* elf/dl-reloc.c (_dl_reloc_bad_use): Print the full 32-bit relocation
	type on ELF64 platforms.

2002-10-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (R_X86_64_GOTTPOFF): Renamed from r_x86_64_GOTTPOFF.

	* elf/elf.h: Define ELF_NOTE_OS_FREEBSD and NT_TASKSTRUCT.

2002-10-24  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-misc.c: Include <sysdep.h>.
	(_dl_debug_vdprintf): Only take dl_load_lock if not _dl_starting_up.

	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h (INTERNAL_SYSCALL,
	INTERNAL_SYSCALL_ERROR_P, INTERNAL_SYSCALL_ERRNO): New macros.
	(INLINE_SYSCALL): Use that.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h (INTERNAL_SYSCALL,
	INTERNAL_SYSCALL_ERROR_P, INTERNAL_SYSCALL_ERRNO): New macros.
	(INLINE_SYSCALL): Use that.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (INTERNAL_SYSCALL,
	INTERNAL_SYSCALL_ERROR_P, INTERNAL_SYSCALL_ERRNO): New macros.
	(INLINE_SYSCALL): Use that.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep.h: Include
	dl-sysdep.h.
	(SYSCALL_ERROR_HANDLER): Define RTLD_PRIVATE_ERRNO variant.
	(__INTERNAL_SYSCALL_STRING): Define.